fine tuned the model related pesticides crop and other things

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,3 +18,18 @@ pandas==2.2.1
 protobuf==4.21.0
 urllib3==1.26.18
 tf-keras==2.15.0
+
+
+fastapi
+uvicorn
+httpx
+pandas
+python-dotenv
+groq
+langchain
+sentence-transformers
+chromadb
+deep-translator
+geopy
+PyPDF2
+sqlalchemy
