--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
